correct homepage url, github url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://PiSethSeam.github.io/khmer-horoscope",
+  "homepage": "https://7piseth.github.io/khmer-horoscope",
   "name": "khmer-horoscope",
   "version": "0.1.0",
   "private": true,
